# luau-debugger

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml  publish.yml
build-clang/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-clang/cppdap/: Makefile  cmake_install.cmake  cppdapConfig.cmake  cppdapConfigVersion.cmake
build-clang/luau/: Makefile  cmake_install.cmake
build-clang/luau/fuzz/: Makefile  cmake_install.cmake
build-clang/luaud/: Makefile  cmake_install.cmake
cmake/toolchains/: windows-clang.cmake
debugger/: CMakeLists.txt
debugger/include/: debugger.h
debugger/src/: debugger.cpp
debugger/src/internal/: breakpoint.cpp  breakpoint.h  debug_bridge.cpp  debug_bridge.h  file.cpp  file.h  file_mapping.h  log.h  lua_statics.cpp  lua_statics.h  scope.h  task_pool.h  utils.h  variable.cpp  variable.h  variable_registry.cpp  variable_registry.h  vm_registry.cpp  vm_registry.h
debugger/src/internal/utils/: dap_utils.h  lua_types.cpp  lua_types.h  lua_utils.cpp  lua_utils.h
extensions/vscode/: .vscodeignore  README.md  package-lock.json  package.json
extensions/vscode/scripts/: build_debugger.js  fetch_debugger.js  package.js
extensions/vscode/src/: extension.ts
luaud/: CMakeLists.txt  file_utils.h  luau_runtime.cpp  luau_runtime.h  main.cpp
tests/: main.lua
tests/a/: a.lua
tests/android/: settings.gradle
tests/android/app/: build.gradle
tests/android/app/src/main/: AndroidManifest.xml
tests/android/app/src/main/java/com/example/test_luau_debugger/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
tests/android/app/src/main/res/layout/: activity_main.xml  fragment_first.xml
tests/android/app/src/main/res/menu/: menu_main.xml
tests/android/app/src/main/res/navigation/: nav_graph.xml
tests/android/app/src/main/res/values/: strings.xml  themes.xml
tests/android/app/src/main/res/values-night/: themes.xml
tests/android/gradle/wrapper/: gradle-wrapper.properties
tests/lua/: main.lua
tests/math/: math.lua
